--- a/LazyCampus/app/src/main/AndroidManifest.xml
+++ b/LazyCampus/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MainActivity"></activity>
+        <activity android:name=".activity.MainActivity" />
         <activity android:name=".activity.TaskDetailActivity" />
         <activity android:name=".activity.LoginActivity">
             <intent-filter>
@@ -21,7 +21,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.RegisterActivity" />
-        <activity android:name=".activity.Publish2Activity"></activity>
+        <activity android:name=".activity.Publish2Activity" />
+        <activity android:name=".activity.ProfileActivity"></activity>
     </application>
 
 </manifest>
